# embedonomicon

./: .gitignore  .travis.yml  404.html  CNAME  README.md  asm.html  book.toml  compiler-support.html  custom-target.html  dma.html  exceptions.html  index.html  logging.html  main.html  memory-layout.html  preface.html  print.html  searchindex.js  sections-in-rust.html  singleton.html  smallest-no-std.html  soc-support.html  toc.html  toc.js
.github/: bors.toml
.github/workflows/: ci.yaml  test_ci.yml
ci/: after-success.sh  install-mdbook.sh  install.sh  script.sh
ci/asm/app/: release.objdump  release.vector_table
ci/asm/app2/: Cargo.toml  release.objdump  release.vector_table
ci/asm/rt/: Cargo.toml  asm.s  build.rs  link.x
ci/asm/rt2/: Cargo.toml  asm.s  build.rs  librt.objdump  link.x  src
ci/concurrency/: Cargo.toml
ci/concurrency/.cargo/: config
ci/concurrency/examples/: atomic.rs  coop.rs  cs1.rs  cs2.rs  cs3.rs  init.rs  mutex.rs  state.rs  static-mut.rs  systick.rs  volatile.rs
ci/dma/: .gitignore  Cargo.toml
ci/dma/examples/: eight.rs  five.rs  four.rs  one.rs  seven.rs  six.rs  three.rs  two.rs
ci/dma/src/: lib.rs
ci/exceptions/rt/: Cargo.toml  (+2 more)
ci/logging/: rt
ci/memory-layout/: Cargo.toml  app.text.objdump  app.vector_table.objdump  link.x
ci/singleton/: rt
ci/smallest-no-std/: Cargo.toml  app.o.nm  app.size
src/: SUMMARY.md  asm.md  compiler-support.md  concurrency.md  custom-target.md  dma.md  exceptions.md  logging.md  main.md  memory-layout.md  preface.md  sections-in-rust.md  singleton.md  smallest-no-std.md  soc-support.md
(+68 files in other folders)
